Fix button layout on Safari

--- a/src/style.css
+++ b/src/style.css
@@ -158,9 +158,10 @@ button {
     background-color: var(--my-message-bg);
     color: var(--my-message-fg);
     border: none;
-    padding: 0.5em 0.8em;
+    padding: 0.4em 0.8em;
     border-radius: 19px;
     font-size: 1em;
+    margin: 0;
 }
 
 .hidden {
